TestSuite/errors/err0047.pas
type TClass = class
constructor; virtual;
begin
end;
end;
    
begin

end.